# UncertainBird

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tf-requirements.txt
birdset/: conv_mc_train.py  eat_mc_train.py  eval.py  train.py  uq_train.py
birdset/configs/: module_configs.py
birdset/datamodule/: base_datamodule.py  birdset_datamodule.py  test_wabad.py  wabad_datamodule.py
birdset/datamodule/components/: transforms.py
birdset/modules/: base_module.py  mc_dropoutmodule.py  mc_dropoutmodule_convnext.py  mc_dropoutmodule_eat.py  multiclass_module.py  multilabel_module.py
birdset/modules/metrics/: multilabel.py
birdset/modules/models/: birdnet.py  convnext.py  eat_soundnet.py  perch_v2.py
birdset/utils/: utils_mc_csv.py
configs/datamodule/: HSN.yaml  WABAD.yaml
configs/logger/: wandb.yaml
configs/module/: multilabel_mc_dropout.yaml
configs/module/network/: resnet_dropout.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
notebooks/: lightning-uq-toolbox-mc_dropout.ipynb
notebooks/benchmarking_calibration/: Calibration_Benchmarking.ipynb  audioprotopnet_BirdSet.ipynb  birdmae_BirdSet.ipynb  convnext_bs_BirdSet.ipynb  masked_test_predictions_20250827_085344.pkl  perch_v2_BirdSet.ipynb
notebooks/development/: oekofor-test.ipynb  perchv2 copy.ipynb  perchv2.ipynb
notebooks/playground/: Test_analysis_diagrams.ipynb
projects/uncertainbird/: README.md  train.sh
uncertainbird/callbacks/: README.md  __init__.py
uncertainbird/datamodule/: BirdSetEvalDataModule.py
uncertainbird/scripts/: dump-predictions.sh  dump_audioprotopnet_predictions.py  dump_predictions.py
uncertainbird/tests/: test_metrics.py
uncertainbird/utils/: misc.py  plotting.py  temperature_scaling.py
(+131 files in other folders)
