[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainbird"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "scipy>=1.11.3",
    "ffprobe>=0.5",
    # --------- pytorch --------- #
    "torch==2.6",
    "torchvision==0.21",
    "lightning>=2",
    "torchmetrics==1.2.0",
    # --------- hydra --------- #
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2",
    # --------- loggers --------- #
    "wandb>=0.22.0",
    "mlflow>=2.11.0",
    # --------- others --------- #
    "rootutils>=1.0.7",
    "pre-commit>=3.5.0",
    "rich==13.7.0",
    "matplotlib>=3.8.0",
    "tensorboard>=2.14.1",
    "ipywidgets>=8.1.1",
    "jupyter>=1.0.0",
    "datasets==3.3.1",
    "audiomentations==0.34.1",
    "torch-audiomentations==0.11.0",
    "transformers==4.38.0",
    "pyrootutils>=1.0.4",
    "pydub>=0.25.1",
    "ipython>=8.18.1",
    "librosa>=0.10.1",
    "numpy>=1.26.4",
    "torchaudio>=2.2.0",
    "scikit-learn==1.3.2",
    "pillow==10.1.0",
    "pandas==2.1.3",
    "soundfile==0.12.1",
    "black[jupyter]==25.1.0",
    "pytest-timeout>=2.3.1",
    "pytest-html>=4.1.1",
    "huggingface-hub>=0.28.1",
    "lightning-uq-box>=0.2.0",
    "tensorflow==2.20",
    "keras==3.11",
    "ml-collections>=1.1.0",
    "kagglehub>=0.3.13",
    "etils>=1.13.0",
    "importlib-resources>=6.5.2",
    "tensorflow-hub>=0.16.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.2",
    "plumbum>=1.8.2",
    "jsonlines>=4.0.0",
    "kaggle>=1.6.11",
]

[tool.setuptools.packages.find]
where = ["projects", "."]
include = ["uncertainbird*", "birdset*"]

